feat: add song and artist images subroutes
